--- a/src/components/QuizData/Category.css
+++ b/src/components/QuizData/Category.css
@@ -6,31 +6,31 @@
 .category-card {
   margin: 2rem 0;
   width: 20rem;
-  height: auto;
+  height: 30rem;
   background-color: rgb(37, 36, 36);
   border-radius: 16px;
+  position: relative;
 }
 .category-description {
-  padding:0 5%;
+  padding: 0 5%;
 }
-.category-title{
-    font-weight: bolder;
-    text-align: center;
-    padding:0 5%;
+.category-title {
+  font-weight: bolder;
+  text-align: center;
+  padding: 0 5%;
 }
-.category-tags{
-    display: flex;
-    justify-content: space-evenly;
-    flex-wrap: wrap;
-    padding:0 0 5%;
+.category-tags {
+  display: flex;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
 }
-.category-tags div{
+.category-tags div {
   background-color: rgba(255, 255, 255, 0.395);
-  padding:2% 5%;
+  padding: 2% 5%;
   border-radius: 10px;
-  
 }
-.category-card-container{
+
+.category-card-container {
   display: flex;
   gap: 50px;
   justify-content: center;
